[package]
name = "fluid_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
bluenoise = "0.2.1"
luisa_compute = { path = "../luisa-compute-rs/luisa_compute" }
rapier2d = "0.17.2"
winit = "0.28.6"
nalgebra = { version = "0.32.3", features = ["convert-glam024"] }
rand_pcg = "0.3.1"
image = "0.24.7"
rand = "0.8.5"
